# DIO-Python-AI-Backend-Developer

./: Criando-Sistema-Bancario-POO.py  Criando-Sistema-Bancario.py  LICENSE  README.md
Python_Algoritmos_Desafio/: calc_med_notas.py  num_par_impar.py  polindromos.py
dio-bank-api/: .env.example  .gitignore  README.md  pyproject.toml
dio-bank-api/src/: config.py  security.py
dio-bank-api/src/schemas/: account.py
dio-bank-api/src/services/: account.py  transaction.py
